<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstTimeUpdateTiming">

    <!-- TODO: Update blank fragment layout -->


    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_vertical"
         android:layout_margin="@dimen/activity_horizontal_margin">-->


    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/fajar_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:text="FAJAR" />

            <EditText
                android:id="@+id/fajar_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:ems="10"
                android:focusable="false"
                android:inputType="time"
                android:text="@string/fajar"
                android:textAlignment="center" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/zohar_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:text="ZUHAR" />

            <EditText
                android:id="@+id/zohar_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:ems="10"
                android:inputType="time"
                android:text="@string/zuhar"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/asar_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:text="ASAR" />

            <EditText
                android:id="@+id/asar_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:ems="10"
                android:inputType="time"
                android:text="@string/asar"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/maghrib_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:text="MAGRIB" />

            <EditText
                android:id="@+id/maghrib_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:ems="10"
                android:inputType="time"
                android:text="@string/magrib"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/isha_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:text="ISHA" />

            <EditText
                android:id="@+id/isha_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:ems="10"
                android:inputType="time"
                android:text="@string/isha"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:text="JUMMA" />

            <EditText
                android:id="@+id/juma_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:ems="10"
                android:inputType="time"
                android:text="@string/juma"
                android:textAlignment="center"

                />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="Update"
                android:textSize="14sp"
                android:textStyle="italic" />

        </TableRow>
    </TableLayout>


    <!-- </LinearLayout>-->
</FrameLayout>